Revert "Might have a new exception to wrap"
This reverts commit 40163c3ae6dc4a24f72195c678416415db5a4833.